# chromiumos-overlay

./: .gitignore  DIR_METADATA  OWNERS  OWNERS.fwupd  OWNERS.kernel  OWNERS.security  PRESUBMIT.cfg  absl-20210324.1.ebuild  pylintrc
app-admin/rsyslog/files/001-add-imstdoutsock-plugin/: Makefile.am  imstdoutsock.c
chromeos/: OWNERS
chromeos-base/perfetto_proto/files/: BUILD.gn
chromeos-languagepacks/: metadata.xml
eclass/: OWNERS  appid.eclass  arc-android-installer.eclass  arc-build-constants.eclass  arc-build.eclass  autotest-external-dep.eclass  autotest.eclass  cargo.eclass  cbi-image.eclass  chromium-source.eclass  coreboot-private-files.eclass  coreboot-sdk.eclass  crashid.eclass  cros-arm64.eclass  cros-bazel.eclass  cros-binary.eclass  cros-board.eclass  cros-camera.eclass  cros-cellular.eclass  cros-common.mk.eclass  cros-config-bsp.eclass  cros-config-test.eclass  cros-cpfe.eclass  cros-credentials.eclass  cros-ec-board.eclass  cros-ec-merge-ro.eclass  cros-ec-release.eclass  cros-ec-utils.eclass  cros-ec.eclass  cros-factory-board.eclass  cros-factory.eclass  cros-firmware.eclass  cros-fuzzer.eclass  cros-fwupd.eclass  cros-go.eclass  cros-i686.eclass  cros-ish.eclass  cros-kernel2.eclass  cros-llvm.eclass  cros-racc.eclass  (+20 more)
licenses/: AOSP-SDK  BSD-Logitech  CrOS-EC  Google-TOS  LICENSE.corel  LICENSE.dsm  LICENSE.xerox-ppds  OWNERS
media-fonts/: OWNERS
media-sound/: DIR_METADATA
metadata/: OWNERS
profiles/: OWNERS  categories
proto/: audio_config.proto  brand_config.proto  build_payload.proto  build_target.proto  build_target_config.proto  (+7 more)
(+879078 files in other folders)
